# ChangeLog for gnome-extra/deskbar-applet
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/deskbar-applet/ChangeLog,v 1.129 2010/01/18 00:02:59 jer Exp $

  18 Jan 2010; Jeroen Roovers <jer@gentoo.org> deskbar-applet-2.26.2.ebuild:
  Stable for HPPA (bug #281427).

  03 Dec 2009; Brent Baude <ranger@gentoo.org> deskbar-applet-2.26.2.ebuild:
  Marking deskbar-applet-2.26.2 ppc64 stable for bug 281427

  28 Nov 2009; Raúl Porcel <armin76@gentoo.org>
  deskbar-applet-2.26.2.ebuild:
  alpha/ia64/sparc stable wrt #281427

*deskbar-applet-2.28.0 (29 Oct 2009)

  29 Oct 2009; Gilles Dartiguelongue <eva@gentoo.org>
  deskbar-applet-2.26.2-r1.ebuild, +deskbar-applet-2.28.0.ebuild:
  New version for GNOME 2.28.

  24 Oct 2009; nixnut <nixnut@gentoo.org> deskbar-applet-2.26.2.ebuild:
  ppc stable #281427

  17 Oct 2009; Markus Meier <maekke@gentoo.org>
  deskbar-applet-2.26.2-r1.ebuild:
  x86 stable, bug #281427

*deskbar-applet-2.26.2-r1 (08 Oct 2009)

  08 Oct 2009; Olivier Crête <tester@gentoo.org>
  +deskbar-applet-2.26.2-r1.ebuild,
  +files/deskbar-applet-2.26.2-double-label.patch:
  Add patch for crash on opening preferences dialog

  08 Oct 2009; Olivier Crête <tester@gentoo.org>
  deskbar-applet-2.26.2.ebuild:
  Stable on amd64, bug #281427

  06 Aug 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -files/deskbar-applet-2.19.5-multilib.patch,
  -deskbar-applet-2.26.1.ebuild, deskbar-applet-2.26.2.ebuild:
  docbook-xml-dtd-4.2 is not optional, bug #271988. Fix broken intltool
  rules. Clean up old revision.

  22 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
  deskbar-applet-2.24.3.ebuild, deskbar-applet-2.26.1.ebuild,
  deskbar-applet-2.26.2.ebuild:
  Fix unknown epause & ebeep commands. Work around sandbox
  issue when importing gnomedesktop, bug #270524.

*deskbar-applet-2.26.2 (18 May 2009)

  18 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
  +deskbar-applet-2.26.2.ebuild: