@@ -1,6 +1,16 @@
 # ChangeLog for gnome-extra/deskbar-applet
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/deskbar-applet/ChangeLog,v 1.129 2010/01/18 00:02:59 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/deskbar-applet/ChangeLog,v 1.130 2010/02/14 23:39:38 eva Exp $
+
+  14 Feb 2010; Gilles Dartiguelongue <eva@gentoo.org>
+  -deskbar-applet-2.24.3.ebuild, deskbar-applet-2.26.2.ebuild,
+  deskbar-applet-2.26.2-r1.ebuild, deskbar-applet-2.28.0.ebuild:
+  DTD is actually needed for build, bug #296717. Clean up old revision.
+
+  14 Feb 2010; Gilles Dartiguelongue <eva@gentoo.org>
+  -deskbar-applet-2.24.3.ebuild, deskbar-applet-2.26.2.ebuild,
+  deskbar-applet-2.26.2-r1.ebuild, deskbar-applet-2.28.0.ebuild:
+  DTD is actually needed for build, bug #296717. Clean up old revision.
 
   18 Jan 2010; Jeroen Roovers <jer@gentoo.org> deskbar-applet-2.26.2.ebuild:
   Stable for HPPA (bug #281427).
